[package]
name = "projzst"
version = "0.1.0"
edition = "2021"
description = "A tool for packing/unpacking .pjz files with MessagePack metadata and zstd compression"
license = "MIT"

[lib]
name = "projzst"
path = "src/lib.rs"

[[bin]]
name = "projzst"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
zstd = "0.13"
tar = "0.4"
serde_ignored = "0.1"

[dev-dependencies]
tempfile = "3.10"